--- a/es/index.html
+++ b/es/index.html
@@ -6,7 +6,7 @@
     <style>
         body {
             background-color: #252525;
-            background-image: url('./imgs/background1.gif');
+            background-image: url('https://raw.githubusercontent.com/Happyuky7/happyuky7.github.io/master/imgs/background1.gif');
             background-size: cover;
             background-position: center; 
             background-repeat: no-repeat;
@@ -167,7 +167,7 @@
     <div class="container">
 
         <div id="language">
-            <img src="./imgs/world-langs.png" alt="Language Icon" style="width: 30px;">
+            <img src="https://raw.githubusercontent.com/Happyuky7/happyuky7.github.io/master/imgs/world-langs.png" alt="Language Icon" style="width: 30px;">
             <ul>
                 <li><a href="./index.html">Default (English)</a></li>
                 <li><a href="./en/index.html">English</a></li>
@@ -176,7 +176,7 @@
             </ul>
         </div>
 
-        <img src="./imgs/animewaifu1.jpg" alt="Icon Anime Waifu" style="display: block; margin: auto; margin-top: 50px; width: 200px;">
+        <img src="https://raw.githubusercontent.com/Happyuky7/happyuky7.github.io/master/imgs/animewaifu1.jpg" alt="Icon Anime Waifu" style="display: block; margin: auto; margin-top: 50px; width: 200px;">
         <!--img src="https://happy7.xyz/img/logo.png" alt="Happyuky7 Logo" style="display: block; margin: auto; margin-top: 50px; width: 200px;"-->
         
         <h1>Happyuky7</h1>
@@ -203,9 +203,9 @@
         <div class="conctact">
             <h3>Póngase en contacto conmigo</h3>
             <p>Se recomienda ponerse en contacto conmigo por discord o twitter</p>
-            <p><a href="https://discord.com/users/Happy7">Discord <img src="./imgs/discord-logo.png" alt="Discord Logo" style="width: 20px;"></a></p>
-            <p><a href="https://discord.gg/3EebYUyeUX">Discord Server <img src="./imgs/discord-logo.png" alt="Discord Logo" style="width: 20px;"></a></p>
-            <p><a href="https://twitter.com/happyuky7">Twitter (X) <img src="./imgs/x-logo.png" alt="Twitter Logo" style="width: 20px;"></a></p>
+            <p><a href="https://discord.com/users/Happy7">Discord <img src=".https://raw.githubusercontent.com/Happyuky7/happyuky7.github.io/master/imgs/discord-logo.png" alt="Discord Logo" style="width: 20px;"></a></p>
+            <p><a href="https://discord.gg/3EebYUyeUX">Discord Server <img src="https://raw.githubusercontent.com/Happyuky7/happyuky7.github.io/master/imgs/discord-logo.png" alt="Discord Logo" style="width: 20px;"></a></p>
+            <p><a href="https://twitter.com/happyuky7">Twitter (X) <img src="https://raw.githubusercontent.com/Happyuky7/happyuky7.github.io/master/imgs/x-logo.png" alt="Twitter Logo" style="width: 20px;"></a></p>
             <p><a href="mailto:contact@happy7.xyz">Email <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_%282020%29.svg/1200px-Gmail_icon_%282020%29.svg.png" alt="Email Logo" style="width: 20px;"></a></p>
         </div>
     </div>
