--- a/jp/index.html
+++ b/jp/index.html
@@ -167,12 +167,12 @@
     <div class="container">
 
         <div id="language">
-            <img src=".https://raw.githubusercontent.com/Happyuky7/happyuky7.github.io/master/imgs/world-langs.png" alt="Language Icon" style="width: 30px;">
+            <img src="https://raw.githubusercontent.com/Happyuky7/happyuky7.github.io/master/imgs/world-langs.png" alt="Language Icon" style="width: 30px;">
             <ul>
-                <li><a href="./index.html">Default (English)</a></li>
-                <li><a href="./en/index.html">English</a></li>
-                <li><a href="./es/index.html">Español</a></li>
-                <li><a href="./jp/index.html">日本語</a></li>
+                <li><a href="/">Default (English)</a></li>
+                <li><a href="en">English</a></li>
+                <li><a href="es">Español</a></li>
+                <li><a href="jp">日本語</a></li>
             </ul>
         </div>
 
