--- a/en/index.html
+++ b/en/index.html
@@ -169,10 +169,10 @@
         <div id="language">
             <img src="https://raw.githubusercontent.com/Happyuky7/happyuky7.github.io/master/imgs/world-langs.png" alt="Language Icon" style="width: 30px;">
             <ul>
-                <li><a href="/">Default (English)</a></li>
-                <li><a href="en">English</a></li>
-                <li><a href="es">Español</a></li>
-                <li><a href="jp">日本語</a></li>
+                <li><a href="https://happyuky7.github.io/">Default (English)</a></li>
+                <li><a href="https://happyuky7.github.io/en">English</a></li>
+                <li><a href="https://happyuky7.github.io/es">Español</a></li>
+                <li><a href="https://happyuky7.github.io/jp">日本語</a></li>
             </ul>
         </div>
 
