--- a/jp/index.html
+++ b/jp/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happyuky7</title>
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Happyuky7/happyuky7.github.io/refs/heads/master/imgs/logo.png"/>
     <style>
         body {
             background-color: #252525;
@@ -176,7 +177,7 @@
             </ul>
         </div>
 
-        <img src="https://raw.githubusercontent.com/Happyuky7/happyuky7.github.io/master/imgs/animewaifu1.jpg" alt="Icon Anime Waifu" style="display: block; margin: auto; margin-top: 30px; width: 200px;">
+        <img src="https://raw.githubusercontent.com/Happyuky7/happyuky7.github.io/refs/heads/master/imgs/icon1.png" alt="Icon Anime Waifu" style="display: block; margin: auto; margin-top: 30px; width: 200px;">
         <!--img src="https://happy7.xyz/img/logo.png" alt="Happyuky7 Logo" style="display: block; margin: auto; margin-top: 50px; width: 200px;"-->
         
         <h1>Happyuky7</h1>
@@ -231,3 +232,4 @@
     
 </body>
 </html>
+
