--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happyuky7</title>
     <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Happyuky7/happyuky7.github.io/refs/heads/master/imgs/logo.png"/>
+    <meta name="description" content="Website, Blog, Projects and More... Github: https://github.com/Happyuky7">
     <style>
         body {
             background-color: #252525;
@@ -232,4 +233,5 @@
     
 </body>
 </html>
+
 
