Enhance SEO with Open Graph meta tags
Added Open Graph meta tags for SEO and improved structure.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <title>Happyuky7</title>
     <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Happyuky7/happyuky7.github.io/refs/heads/master/imgs/logo.png"/>
     <meta name="description" content="Website, Blog, Projects and More... Github: https://github.com/Happyuky7">
+
+    <!-- seo + discord embed -->
+    <meta content="happy7.xyz" property="og:title" />
+    <meta content="Happy7" property="og:description" />
+    <meta content="https://happy7.xyz" property="og:url" />
+    <meta content="Website, Blog, Projects and More... Github: https://github.com/Happyuky7" name="description" />
+    <meta content="#27F59F" data-react-helmet="true" name="theme-color" />
+
     <style>
         body {
             background-color: #252525;
@@ -233,5 +241,6 @@
     
 </body>
 </html>
+
 
 
