--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- seo + discord embed -->
     <meta content="happy7.xyz" property="og:title" />
-    <meta content="Happy7" property="og:description" />
+    <meta content="Website, Blog, Projects and More... Github: https://github.com/Happyuky7" property="og:description" />
     <meta content="https://happy7.xyz" property="og:url" />
     <meta content="Website, Blog, Projects and More... Github: https://github.com/Happyuky7" name="description" />
     <meta content="#27F59F" data-react-helmet="true" name="theme-color" />
@@ -241,6 +241,7 @@
     
 </body>
 </html>
+
 
 
 
