--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="description" content="Website, Blog, Projects and More... Github: https://github.com/Happyuky7">
 
     <!-- seo + discord embed -->
-    <meta content="happy7.xyz" property="og:title" />
+    <meta content="happyuky7.com" property="og:title" />
     <meta content="Website, Blog, Projects and More... Github: https://github.com/Happyuky7" property="og:description" />
-    <meta content="https://happy7.xyz" property="og:url" />
+    <meta content="https://happyuky7.com" property="og:url" />
     <meta content="Website, Blog, Projects and More... Github: https://github.com/Happyuky7" name="description" />
     <meta content="#27F59F" data-react-helmet="true" name="theme-color" />
 
@@ -179,10 +179,10 @@
         <div id="language">
             <img src="https://raw.githubusercontent.com/Happyuky7/happyuky7.github.io/master/imgs/world-langs.png" alt="Language Icon" style="width: 30px;">
             <ul>
-                <li><a href="https://happy7.xyz/">Default (English)</a></li>
-                <li><a href="https://happy7.xyz/en">English</a></li>
-                <li><a href="https://happy7.xyz/es">Español</a></li>
-                <li><a href="https://happy7.xyz/jp">日本語</a></li>
+                <li><a href="https://happyuky7.com/">Default (English)</a></li>
+                <li><a href="hhttps://happyuky7.com/en">English</a></li>
+                <li><a href="hhttps://happyuky7.com/es">Español</a></li>
+                <li><a href="https://happyuky7.com/jp">日本語</a></li>
             </ul>
         </div>
 
@@ -207,7 +207,7 @@
         <!--p id="note">
             Note: I am still working on this web/portfolio you can check on my web links or if my networks or my github on it by clicking on the buttons below.
         </p-->
-        <button><a href="http://happy7.xyz/links">View Links Socials and Others</a></button>
+        <button><a href="https://happyuky7.com/links">View Links Socials and Others</a></button>
         <button><a href="https://github.com/happyuky7">Check My Github</a></button>
 
         <div class="conctact">
@@ -241,6 +241,7 @@
     
 </body>
 </html>
+
 
 
 
