Fix HTML encoding issues in index.html

--- a/jp/index.html
+++ b/jp/index.html
@@ -170,10 +170,10 @@
         <div id="language">
             <img src="https://raw.githubusercontent.com/Happyuky7/happyuky7.github.io/master/imgs/world-langs.png" alt="Language Icon" style="width: 30px;">
             <ul>
-                <li><a href="https://happy7.xyz/">Default (English)</a></li>
-                <li><a href="https://happy7.xyz/en">English</a></li>
-                <li><a href="https://happy7.xyz/es">Español</a></li>
-                <li><a href="https://happy7.xyz/jp">日本語</a></li>
+                <li><a href="https://happyuky7.com/">Default (English)</a></li>
+                <li><a href="https://happyuky7.com/en">English</a></li>
+                <li><a href="https://happyuky7.com/es">Español</a></li>
+                <li><a href="https://happyuky7.com/jp">日本語</a></li>
             </ul>
         </div>
 
@@ -198,7 +198,7 @@
         <!--p id="note">
             Note: I am still working on this web/portfolio you can check on my web links or if my networks or my github on it by clicking on the buttons below.
         </p-->
-        <button><a href="http://happy7.xyz/links">リンク集を見る ソーシャルその他</a></button>
+        <button><a href="https://happyuky7.com/links">リンク集を見る ソーシャルその他</a></button>
         <button><a href="https://github.com/happyuky7">私のGithubをチェックする</a></button>
 
         <div class="conctact">
@@ -232,4 +232,5 @@
     
 </body>
 </html>
+
 
